# OpenOperator

./: .editorconfig  .env.sample  .gitignore  README.md  hello.py  pyproject.toml
agents/agent-0/: pyproject.toml  script_server2.py
agents/agent-oo/: README.md  main.py  pyproject.toml
agents/agent-oo/desktop_env/controllers/: python.py  setup.py  vm.py
agents/agent-oo/desktop_env/envs/: desktop_env.py
agents/agent-oo/desktop_env/evaluators/getters/: chrome.py  general.py
agents/agent-oo/mm_agents/navi/: agent.py
agents/agent-oo/mm_agents/navi/gpt/: gpt4v_azure.py
agents/agent-oo/mm_agents/navi/screenparsing_oss/omniparser/: omniparser.py
agents/agent-oo/mm_agents/navi/screenparsing_oss/omniparser_client/: client.py  omniparser.py
agents/agent-waa/: README.md  lib_run_single.py  my_run.py  pyproject.toml
agents/agent-waa/mm_agents/navi/: agent.py
agents/agent-waa/mm_agents/navi/screenparsing_oss/omniparser/: omniparser.py
agents/agent_oo/: README.md  main.py  my_utils.py  run.py  tracker.py
agents/agent_oo/agent/: helpers.py  main.py
agents/agent_oo/agent/llm_clients/: azure_openai.py
agents/agent_oo/agent/som_clients/: obs.py  omniparser.py  som.py
agents/agent_oo/docs/: system_message_full.txt  system_message_short.txt  user_message.txt
agents/agent_oo/environment/computer/: env.py  server_client.py
agents/agent_oogen/: config.py  helpers.py  logging_setup.py  main.py  pyproject.toml  tracker.py
agents/agent_oogen/agent/: agent_me.py  agent_planner.py  helpers.py  main.py  main_old.py  team.py
agents/agent_oogen/agent/clients/computer/: server_client.py
agents/agent_oogen/agent/clients/llm/: azure_openai.py
agents/agent_oogen/agent/llm_clients/: azure_openai.py
agents/agent_oogen/agent/tools/: get_stock_price.py  get_weather.py  keyboard_hotkey.py  mouse_double_click.py  mouse_left_click.py  mouse_scroll.py
agents/agent_oogen/configs/notepad/: scenario-1.json
agents/agent_oogen/configs/teams/: scenario-1.json  scenario-2.json  scenario-3.json
agents/agent_oogen2/: README.md  main.py  pyproject.toml
agents/agent_oogen2/agent/: agent_me.py  agent_planner.py  helpers.py  team.py
agents/agent_oogen2/agent/clients/computer/: server_client.py
agents/agent_oogen2/agent/clients/som/: omniparser.py
agents/agent_oogen2/agent/tools/: analyse_ui_elements.py  keyboard_hotkeys.py  keyboard_type.py  mouse_double_click.py  mouse_left_click.py  mouse_move.py  mouse_scroll.py  python_repl.py
agents/agent_ooweb/: README.md  main.py  pyproject.toml  test.bat
agents/agent_ooweb/agent/: agent_web.py
agents/agent_ooweb/agent/clients/computer/: server_client.py
agents/agent_ooweb/agent/tools/: keyboard_type.py  mouse_move.py  mouse_scroll.py
agents/test-servers/: pyproject.toml  script_server1.py  script_server2.py  script_ui.py
agents/test-servers/test/: parsed_content_list.json
cli/: main.py  pyproject.toml
cli/commands/: model.py
computers/: README.md
computers/macos/: README.md
computers/windows/: compose-local.yml  compose.yml
computers/windows/data/hello/: hello.py
computers/windows/data/init/: main.py  main_ui.py  software.json
computers/windows/data/init/backup/: main_backup.py  main_backup2.py  main_copy.py  main_ui_async.py  teams_configurator.py
computers/windows/data/server1/: main.py
computers/windows/data/server2/: human.py  main.py  requirements.txt
computers/windows/docker/: README.md  compose-local.yml
computers/windows/docker/data/init/: main.py  requirements.txt  software.json
computers/windows/docker/data/init/teams/: teams_configurator.py
computers/windows/docker/data/logs/: README.md
computers/windows/docker/data/server2/: requirements.txt
computers/windows/dockur/: Dockerfile
computers/windows/parallels-vm/: README.md  install.bat
computers/windows/parallels-vm/data/init/: main.py  software.json
computers/windows/parallels-vm/data/init/teams/: helpers.py
computers/windows/parallels-vm/data/server1/: main.py
computers/windows/parallels-vm/data/server2/: README.md  main.py
computers/windows/scripts/: install.bat  install_vm.bat  run_server1.ps1  run_server2.ps1
computers/windows_vm/: install_vm.bat  start_server_1.bat  start_server_2.bat
computers/windows_vm/data/init/: main.py
computers/windows_vm/data/server1/: main.py
computers/windows_vm/data/server2/: README.md  main.py
docs/: Autogen.drawio  test-users.md
models/downloader/: download.py  pyproject.toml
models/magma/: README.md  helpers.py  main.py  main_image.py  main_video.py  pyproject.toml
models/server-omniparser/: pyproject.toml  server.py
models/server-omniparser/util/: box_annotator.py  utils.py
models/ui/: README.md  pyproject.toml
models/ui/util/: omniparser.py
models/ui2/: README.md  pyproject.toml
models/ui2/server/: omniparserserver.py
models/ui2/util/: utils.py
operator/: README.md
scripts/: requirements-dev.txt  setup.bat  setup.py  setup.sh
ui/: agent.py  app.py  novnc_proxy.py  pyproject.toml
ui/static/novnc/app/styles/: base.css
ui/static/novnc/lib/: deflator.js  inflator.js
