[project]
name = "agent-oogen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "autogen-agentchat>=0.4.8",
    "autogen-ext[azure,openai]>=0.4.8",
    "azure-core>=1.32.0",
    "azure-identity>=1.20.0",
    "langchain-community>=0.3.19",
    "langchain-experimental>=0.3.4",
    "python-dotenv>=1.0.1",
]
